Ajustes no projeto-android

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por José Luiz para o <a href="https://www.youtube.com/cursoemvideo">Curso em Vídeo</a></p>
+        <p>Site criado por <a href="https://github.com/devnetok">Luiz Ramos</a> para o <a href="https://www.youtube.com/cursoemvideo">CursoemVideo</a></p>
     </footer>
 </body>
 </html>
